feat: add packages

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "vite": "^5.0.0"
   },
   "dependencies": {
-    "react": "^19.2.1"
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
+    "react-router-dom": "^7.10.0"
   }
 }
