--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-	"@vitejs/plugin-react": "^4.0.0",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^4.0.0",
     "vite": "^5.0.0"
   },
   "dependencies": {
